[package]
name = "web-pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = "1.34.0"
